fix header z-index

--- a/frontend/src/layouts/components/Header/Header.module.scss
+++ b/frontend/src/layouts/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 2;
     box-shadow: 0 1px 1px 0 rgb(0 0 0 / 5%);
 }
 
